--- a/.github/actions/action.yaml
+++ b/.github/actions/action.yaml
@@ -1,44 +1,39 @@
 # This is a basic workflow to help you get started with Actions
 
-name: "agent-retry"
+name: "ms-team-notify"
 
 # Controls when the workflow will run
 inputs:
-  HOST_IP:
+  HOST_NAME:
     type: string
-    description: "HOST_IP"
+    description: "HOST_NAME"
+    required: true
+  JOB_NAME:
+    type: string
+    description: "JOB_NAME"
+    required: true
+  JOB_NUMBER:
+    type: string
+    description: "JOB_NUNBER"
+    required: true
+  ENV:
+    type: string
+    description: "ENV"
+    required: true
+  MESSAGE:
+    type: string
+    description: "MESSAGE"
+    required: true
+  STATUS:
+    type: string
+    description: "STATUS"
     required: true
 
 runs:
   using: "composite"
   steps:
-    - name: Set IP addresses
+    - name: Curl-test
       shell: bash
-      id: set-ips
+      id: Curl-test
       run: |
-        echo "IPs=${{ inputs.HOST_IP }}" >> $GITHUB_ENV
-    - name: Check connection
-      shell: bash
-      run: |
-        for ip in ${{ env.IPs }}; do
-          echo "Checking $ip..."
-          if nc -vz $ip 22; then
-            echo "Successfully connected to $ip"
-            echo "result=$ip" >> $GITHUB_ENV
-            SUCCESS=true
-            break
-          else
-            echo "Connection failed for $ip"
-          fi
-        done
-        if [ "$SUCCESS" = false ]; then
-          echo "No IPs were reachable. Exiting."
-          exit 1
-        fi
-          env
-        
-    - name: Use selected IP
-      shell: bash
-      if: success()
-      run: |
-        echo "Using the selected IP: $result"
+        curl -X POST '${{ inputs.HOST_NAME }}' -H "Content-Type: application/json" -d '{"jobname" : "${{ inputs.JOB_NAME }}","jobnumber" : "${{ inputs.JOB_NUMBER }}","ENV" : "${{ inputs.ENV }}","MESSAGE" : "${{ inputs.MESSAGE }}","STATUS" : "${{ inputs.STATUS }}"}'
